--- a/src/DashAgil.Web/src/app/authentication/signin/signin.component.scss
+++ b/src/DashAgil.Web/src/app/authentication/signin/signin.component.scss
@@ -1,12 +1,7 @@
 .container-login100 {
     background-image: url('../../../assets/images/home3.jpg');
-    background-size: contain;
-    background-repeat: round;
-}
-
-.login100-form {
-    // background-color: #000000;
-    // opacity: 0.9;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 input:-internal-autofill-selected {
