--- a/src/DashAgil.Web/src/app/dashboard/stories/stories.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/stories/stories.component.html
@@ -21,7 +21,7 @@
             <mat-label>Squad</mat-label>
             <mat-select [formControl]="controlSquad">
               <mat-optgroup *ngFor="let client of clients" [label]="client.nome">
-                <mat-option *ngFor="let squad of client.squads" [value]="squad.id" with="200px">
+                <mat-option *ngFor="let squad of client.squads" [value]="squad.id" >
                   {{squad.nome}}
                 </mat-option>
               </mat-optgroup>
