--- a/src/DashAgil.Web/src/app/authentication/signin/signin.component.scss
+++ b/src/DashAgil.Web/src/app/authentication/signin/signin.component.scss
@@ -1,10 +1,16 @@
 .container-login100 {
-  background-image: url('../../../assets/images/home3.jpg');
-  background-size: contain;
-  background-repeat: round;
+    background-image: url('../../../assets/images/home3.jpg');
+    background-size: contain;
+    background-repeat: round;
 }
 
 .login100-form {
-  // background-color: #000000;
-  // opacity: 0.9;
+    // background-color: #000000;
+    // opacity: 0.9;
+}
+
+input:-internal-autofill-selected {
+  background-color: black !important;
+  background-image:none !important;
+  color: #000000 !important;
 }
