--- a/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.html
@@ -16,6 +16,20 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Squad</mat-label>
+            <mat-select [formControl]="controlSquad">
+              <mat-optgroup *ngFor="let client of clients" [label]="client.nome">
+                <mat-option *ngFor="let squad of client.squads | sortBy:'asc':'nome'" [value]="squad.id" with="200px">
+                  {{squad.nome}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
           <div class="card">
             <!-- <span class="h4 title">Indicadores</span> -->
@@ -41,12 +55,11 @@
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
           <div class="card">
             <div class="header">
-              <h2>Radar Ágil</h2>
+              <h2></h2>
             </div>
             <div class="body">
               <div class="card radar-container">
-                <div echarts #radar class="radar" (chartClick)="onChartEvent($event, 'chartClick')"
-                  [options]="optionsRadar"></div>
+                <div echarts #radar class="radar" [options]="optionsRadar"></div>
               </div>
             </div>
           </div>
