--- a/src/DashAgil.Web/src/app/dashboard/stories/stories.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/stories/stories.component.html
@@ -16,29 +16,25 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Squad</mat-label>
+            <mat-select [formControl]="controlSquad">
+              <mat-optgroup *ngFor="let client of clients" [label]="client.nome">
+                <mat-option *ngFor="let squad of client.squads | sortBy:'asc':'nome'" [value]="squad.id" with="200px">
+                  {{squad.nome}}
+                </mat-option>
+              </mat-optgroup>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
           <div class="card">
             <div class="body">
               <div class="responsive_table">
-                <div class="materialTableHeader">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul class="header-buttons-left ml-0">
-                        <li class="dropdown">
-                          <h2>
-                            <strong>Histórias</strong>
-                          </h2>
-                        </li>
-                        <li class="dropdown m-l-20">
-                          <label for="search-input"><i class="material-icons search-icon">search</i></label>
-                          <input placeholder="Search" type="text" #filter class="browser-default search-field"
-                            aria-label="Search box">
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+                <mat-table [dataSource]="dataSource" matSort>
                   <ng-container matColumnDef="id">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
                     <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
@@ -64,7 +60,7 @@
                       Status
                     </mat-header-cell>
                     <mat-cell *matCellDef="let row">
-                      {{row.status}}
+                      <span class="badge" [ngClass]="defineStatusColor(row.status)"> {{row.status}} </span>
                     </mat-cell>
                   </ng-container>
                   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
