--- a/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
@@ -8,7 +8,7 @@
               <h4 class="page-title">Squad</h4>
             </li>
             <li class="breadcrumb-item bcrumb-1">
-              <a routerLink="/dashboard/main">
+              <a routerLink="/dashboard">
                 <i class="fas fa-home"></i> Dashboard</a>
             </li>
             <li class="breadcrumb-item bcrumb-2">
@@ -22,11 +22,11 @@
 
     <div class="row">
       <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="w-100">
           <mat-label>Squad</mat-label>
           <mat-select [formControl]="controlSquad">
             <mat-optgroup *ngFor="let client of clients" [label]="client.nome">
-              <mat-option *ngFor="let squad of client.squads" [value]="squad.id" with="200px">
+              <mat-option *ngFor="let squad of client.squads" [value]="squad.id">
                 {{squad.nome}}
               </mat-option>
             </mat-optgroup>
@@ -34,10 +34,10 @@
         </mat-form-field>
       </div>
       <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="w-100">
           <mat-label>Sprint</mat-label>
           <mat-select [formControl]="controlSprint">
-            <mat-option *ngFor="let sprint of sprints" [value]="sprint.id" with="200px">
+            <mat-option *ngFor="let sprint of sprints" [value]="sprint.id">
               {{sprint.nome}}
             </mat-option>
           </mat-select>
@@ -47,7 +47,7 @@
 
     <div class="row">
       <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
-        <div class="card">
+        <div class="card squad">
           <div class="header">
             <h2>SQUAD <strong>{{squadName}}</strong></h2>
           </div>
