--- a/src/DashAgil.Web/src/app/layout/header/header.component.html
+++ b/src/DashAgil.Web/src/app/layout/header/header.component.html
@@ -5,7 +5,7 @@
         data-target="#navbar-collapse" aria-expanded="false"></a>
       <!-- mobile menu bars -->
       <a href="#" onClick="return false;" class="bars" (click)="mobileMenuSidebarOpen($event,'overlay-open')"></a>
-      <a class="navbar-brand" routerLink="dashboard/main">
+      <a class="navbar-brand" routerLink="dashboard">
         <img src="assets/images/logo/deal.png" alt="" />
         <span class="logo-name">DashAgil</span>
       </a>
@@ -28,10 +28,10 @@
         <!-- #END# Full Screen Button -->
         <!-- #START# Notifications-->
         <li class="nav-item" ngbDropdown>
-          <button mat-icon-button ngbDropdownToggle class="nav-notification-icons">
+          <!-- <button mat-icon-button ngbDropdownToggle class="nav-notification-icons">
             <mat-icon>notifications_none</mat-icon>
             <span class="label-count bg-orange"></span>
-          </button>
+          </button> -->
           <div ngbDropdownMenu class="notification-dropdown pullDown">
             <div class="noti-list" style="position: relative; max-width: 600px; max-height: 250px;" [perfectScrollbar]>
               <ul class="menu">
@@ -58,7 +58,7 @@
         <!-- #END# Notifications-->
         <li class="nav-item user_profile" ngbDropdown>
           <a href="#" onClick="return false;" ngbDropdownToggle role="button" class="nav-notification-icons pt-0">
-            <img src="assets/images/user.jpg" class="rounded-circle" width="32" height="32" alt="User">
+            <img src="assets/images/user/user2.png" class="rounded-circle" width="32" height="32" alt="User">
           </a>
           <div ngbDropdownMenu class="notification-dropdown pullDown">
             <div class="noti-list" style="position: relative; max-width: 600px; max-height: 300px;" [perfectScrollbar]>
